# Automatic-time-lapse-creator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  time_lapse_creator.py  time_management.py  video_manager.py
.cursor/: AGENTS.md
.github/workflows/: publish-to-test-pypi.yml  python-package.yml
app/: time_lapse_creator.py  time_manager.py  video_manager.py
src/automatic_time_lapse_creator/: __init__.py  __init__pyi  cache_manager.py  source.py  source.pyi  time_lapse_creator.py  time_lapse_creator.pyi  time_manager.py  time_manager.pyi  video_manager.py  video_manager.pyi  weather_station_info.py  weather_station_info.pyi  youtube_manager.py  youtube_manager.pyi
src/automatic_time_lapse_creator/common/: constants.py  constants.pyi  utils.py  utils.pyi
src/automatic_time_lapse_creator_kokoeverest/: cache_manager.py  source.py  time_lapse_creator.py  time_manager.py  video_manager.py
src/automatic_time_lapse_creator_kokoeverest/common/: constants.py  exceptions.py
tests/: test_cache_manager.py  test_data.py  test_logger.py  test_mocks.py  test_source.py  test_time_lapse_creator.py  test_time_manager.py  test_utils.py  test_video_manager.py  test_youtube_auth.py
types/automatic_time_lapse_creator/: cache_manager.pyi  time_lapse_creator.pyi  time_manager.pyi
types/automatic_time_lapse_creator/common/: constants.pyi
