[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "automatic_time_lapse_creator_kokoeverest"
authors = [
  { name="Kaloyan Peychev", email="kokoeverest@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "astral>=3.2",
    "certifi>=2024.8.30",
    "charset-normalizer>=3.4.0",
    "colorama>=0.4.6",
    "idna>=3.10",
    "iniconfig>=2.0.0",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "packaging>=24.2",
    "pluggy>=1.5.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "tzdata>=2024.2",
    "urllib3>=2.2.3",
]
description = "A Python script for extracting images from a web cam url and converting these images into a timelapse" 
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/kokoeverest/Automatic-time-lapse-creator"
Issues = "https://github.com/kokoeverest/Automatic-time-lapse-creator/issues"